# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.json  spec.yaml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
.sqlx/: query-0b29f097ed204b5898143fad548aaabf745bc9c8df235ca22c85d5da032d50b1.json
migrations/: 20220114012728_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
