[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Dalton Stegner <dmstegner@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# moved core logic to lib since that can be shared with tests
[lib]
path = "src/lib.rs"

# we can only have one library but multiple binaries
# we don't have to do this but doesn't hurt to be explicit
[[bin]]
path = "src/main.rs"
name  = "zero2prod"


[dependencies]
# = exactly this version
actix-web = "=4.0.0-beta.19"
tokio = { version = "1", features= ["macros", "rt-multi-thread"] }
# we need the optional `derive` feature to use `serde's` procedural macros
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    # sqlx to use the actix runtime for its futures and rustls as TLS backend
    "runtime-actix-rustls",
    # give access to sqlx::query and query_as
    "macros",
    # postgres functionality
    "postgres",
    # sql UUID to uuid crate (id column)
    "uuid",
    # timestamptz to DateTime<T>
    "chrono",
    # gives us migration functionality sqlx-cli
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"