[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Dalton Stegner <dmstegner@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# moved core logic to lib since that can be shared with tests
[lib]
path = "src/lib.rs"

# we can only have one library but multiple binaries
# we don't have to do this but doesn't hurt to be explicit
[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
# = exactly this version
actix-web = "=4.0.0-beta.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# we need the optional `derive` feature to use `serde's` procedural macros
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"] }
# allows custom deserialization functions
serde-aux = "3"
config = "0.11"
# generate uuid
uuid = { version = "0.8.1", features = ["v4"] }
# used for utc
chrono = "0.4.15"
# used for tracing through threads
tracing = { version = "0.1", features = ["log"] }
# more structured, reduce boiler plate logging
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
# formattig of logging
tracing-bunyan-formatter = "0.3"
# explicitly register a logger implementation to redirect logs to our tracing subscriber for processing.
tracing-log = "0.1"
# makes actix web logging aware
tracing-actix-web = "=0.5.0-beta.9"
# used to mark model fields that are considered sensitive
secrecy = { version = "0.8", features = ["serde"] }
# extension trait to provide the `graphemes` method
# on `String` and `&str`
unicode-segmentation = "1"
# email validation
validator = "0.14"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    # sqlx to use the actix runtime for its futures and rustls as TLS backend
    "runtime-actix-rustls",
    # give access to sqlx::query and query_as
    "macros",
    # postgres functionality
    "postgres",
    # sql UUID to uuid crate (id column)
    "uuid",
    # timestamptz to DateTime<T>
    "chrono",
    # gives us migration functionality sqlx-cli
    "migrate",
    # used to mock connection for offline
    "offline"
]

[dev-dependencies]
# used to make calls in tests
reqwest = "0.11"
# used for like globalization data, called at most once
once_cell = "1"
# used assertions to work with Rust types
claim = "0.5"
# used to generate fake data
fake = "~2.3"
# property based testing library
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"